Add change handler for mode select field

--- a/src/styles/h5peditor-phrase-randomizer-solutions-list.scss
+++ b/src/styles/h5peditor-phrase-randomizer-solutions-list.scss
@@ -1,4 +1,8 @@
 .h5peditor-phrase-randomizer-solutions-list {
+  &.display-none {
+    display: none;
+  }
+
   .field-name-solutions {
     .content {
       &.error {
